Project

General

Profile

Actions

Bug #16740

closed

Cannot disable journaling or remove non-mirrored, "non-primary" image

Added by Jason Dillaman almost 8 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Use rbd-mirror to create a non-primary image. If the 'rbd_mirroring' object is removed, this image will now be treated as if mirroring is disabled. However, no actions can be taken because the journal flags it as a non-primary image. librbd needs to recover from this situation by also ensuring that mirroring is enabled against the image before determining that it is non-primary.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #17060: jewel: Cannot disable journaling or remove non-mirrored, "non-primary" imageResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman over 7 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #2

Updated by Jason Dillaman over 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Mykola Golub over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Copied to Backport #17060: jewel: Cannot disable journaling or remove non-mirrored, "non-primary" image added
Actions #5

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions #6

Updated by Jason Dillaman over 7 years ago

  • Status changed from Resolved to Pending Backport
Actions #7

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF