librbd: permit disabling journaling if in corrupt state

Fixes: http://tracker.ceph.com/issues/16740
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 6afb884d755697528684fad54dbb69b15d4386f1)